--- a/style.css
+++ b/style.css
@@ -1,4 +1,248 @@
+@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@400;800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-weight: 500;
+  font-family: "Mukta", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+/* Logo-Pic */
+
+.logo img {
+  height: 100px;
+  border-radius: 20px;
+  /* border: 2px solid black; */
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  box-shadow: 0px 5px rgba(1, 1, 1, 0.05);
+  position: sticky;
+  top: 0;
+  background: white;
+  z-index: 50;
+}
+
+.bar {
+  margin-top: 5px;
+  font-size: 30px;
+}
+
+.container {
+  width: 90%;
+  margin: auto;
+}
+
+.middle_img img {
+  height: 700x;
+  width: 500px;
+  border-radius: 1000px;
+  /* display: flex;
+  justify-content: center; */
+}
+
+middle {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 30px;
+  gap: 110px;
+}
+
+.middle_content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.middle_btn {
+  background-color: darkgreen;
+  align-self: flex-start;
+  height: 45px;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+}
+
+button:hover {
+  border: 2px solid red;
+}
+
+button {
+  padding: 10px;
+  transition: 0.4s;
+}
+
+middle .tag {
+  background-color: aquamarine;
+  align-self: flex-start;
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.middle_content h1 {
+  font-size: 70px;
+  font-weight: 900;
+}
+
+@media (max-width: 800px) {
+  middle {
+    display: flex;
+    flex-direction: column;
+  }
+  .middle_content h1 {
+    font-size: 30px;
+  }
+  .middle_img img {
+    width: 90%;
+  }
+}
+
+/* @media (min-width: 800px) {
+  middle {
+    display: flex;
+    flex-direction: column;
+  }
+} */
+
+.voucher img {
+  height: 150px;
+  width: 150px;
+}
+
+.customer img {
+  height: 150px;
+  width: 150px;
+}
+
+.Fast-Delivery img {
+  height: 150px;
+  width: 150px;
+}
+
+underline {
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  /* flex-direction: column; */
+}
+
+.voucher,
+.customer,
+.Fast-Delivery {
+  display: flex;
+  padding: 30px;
+  flex-direction: row;
+  margin-top: 70px;
+  gap: 20px;
+  justify-content: center;
+  font-weight: 300;
+  margin-bottom: 40px;
+}
+
+.voucher:hover,
+.customer:hover,
+.Fast-Delivery:hover {
+  box-shadow: 5px 5px rgba(1, 1, 1, 0.07);
+  transition: 1s;
+  cursor: pointer;
+}
+
+.awards {
+  border: 2px solid gray;
+}
+
+.grid img {
+  height: 500px;
+  border-radius: 20px;
+  width: 400px;
+}
+
+.grid {
+  display: grid;
+  gap: 20px;
+  padding-top: 2px;
+  /* justify-content: center; */
+  grid-template-columns: 1fr 1fr 1fr;
+  /* overflow: hidden; */
+}
+
+menu .tag {
+  background-color: aquamarine;
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  align-self: center;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+menu {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (max-width: 1000px) {
+  underline {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+last {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  background-color: aqua;
+  padding: 20px 20px;
+  border-radius: 20px;
+  margin-bottom: 2px;
+  line-height: 30px;
+  list-style: none;
+}
+
+last:hover {
+  cursor: pointer;
+}
+
+.logo-last img {
+  height: 150px;
+  border-radius: 20px;
+}
+
+last h3 {
+  color: gray;
+  font-size: 20px;
+}
+
+last ul {
+  list-style: none;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+@media (max-width: 1000px) {
+  last {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 1000px) {
+  grid {
+    display: flex;
+    flex-direction: column;
+  }
 }
